<resources>
    <string name="app_name">MyNutrition</string>
    <string name="button_addMeal">Nutritional Values</string>
    <string name="hint_mealTitle">Meal Name</string>
    <string name="hint_mealDescription">Description </string>
    <string name="menu_addMeal">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="no_title_toast">Please Enter a name for the meal</string>
    <string name="button_saveMeal">Change Nutritional Values</string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_meal_image">Select an image</string>
    <string name="button_changeImage"> Change Image </string>

    <string name="energy"> Energy per 100 gr/ml </string>
    <string name="fat"> Fat per 100 gr/ml </string>
    <string name="saturatedFat"> Saturated fat</string>
    <string name="cholesterol"> Cholesterol per 100 gr/ml </string>
    <string name="carbohydrate"> Carbohydrate per 100 gr/ml </string>
    <string name="sugarCarbohydrate"> Sugar from carbohydrate</string>
    <string name="proteins"> Proteins per 100 gr/ml </string>
    <string name="fiber"> Fiber per 100 gr/ml </string>
    <string name="salt"> Salt per 100 gr/ml </string>
    <string name="calcium"> Calcium per 100 gr/ml </string>
    <string name="sodium"> Sodium per 100 gr/ml </string>
    <string name="iron"> Iron per 100 gr/ml </string>
    <string name="potassium"> Potassium per 100 gr/ml </string>
    <string name="vitA"> Vitamin A per 100 gr/ml </string>
    <string name="vitB1"> Vitamin B1 per 100 gr/ml </string>
    <string name="vitB2"> Vitamin B2 per 100 gr/ml </string>
    <string name="vitB3"> Vitamin B3 per 100 gr/ml </string>
    <string name="vitB5"> Vitamin B5 per 100 gr/ml </string>
    <string name="vitB6"> Vitamin B6 per 100 gr/ml </string>
    <string name="vitB8"> Vitamin B8 per 100 gr/ml </string>
    <string name="vitB9"> Vitamin B9 per 100 gr/ml </string>
    <string name="vitB12"> Vitamin B12 per 100 gr/ml </string>
    <string name="vitC"> Vitamin C per 100 gr/ml </string>
    <string name="button_location">Where I ate that</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_delete">Delete</string>
    <string name="toolbarNutrition">Nutritional Values</string>
    <string name="newMeal">New Meal</string>
    <string name="updateMeal">Update Meal</string>
    <string name="toConsume">For today, should consume:</string>
    <string name="btnListMeals">Check my meals</string>
    <string name="btnChangeProfile">Update my profile</string>
    <string name="yourProfile">Your Profile</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="button_saveProfile">Save Profile</string>
    <string name="noNegativeWeightHeight">Weights or Heights cannot be negative or zero</string>
    <string name="updateProfile">Update My Profile</string>
    <string name="myMeals">My Meals</string>
    <string name="noName">Please, enter your name</string>
    <string name="weightWord">Weight</string>
    <string name="heightWord">Height</string>
    <string name="iamman">I am a man</string>
    <string name="actlvl">Activity Level</string>
    <string name="birthdate">Birth date</string>
    <string name="calories">calories</string>
    <string name="caloriesCompleted">You have consumed all the calories expected for today and </string>
    <string name="caloriesCompleted2"> extra calories</string>
    <string name="proteinsCompleted">You have already consumed all the calories expected for today and </string>
    <string name="proteinsCompleted2"> extra proteins</string>
    <string name="fats">grams of fat</string>
    <string name="fatCompleted">You have already consumed all the fat expected for today and</string>
    <string name="fatCompleted2"> extra grams of fat</string>
    <string name="protein">grams of protein</string>
    <string name="irons">mg of iron</string>
    <string name="ironCompleted">You have already consumed all the iron expected for today and</string>
    <string name="ironCompleted2"> extra mg of fat</string>
    <string name="calciumCompleted">You have already consumed all the calcium expected for today and</string>
    <string name="calciumCompleted2"> extra mg of calcium</string>
    <string name="calciums"> mg of calcium</string>

    <string-array name="actlvlnames">
        <item>Low or null exercise</item>
        <item>1 to 3 days a week</item>
        <item>3 to 5 days a week</item>
        <item>6 to 7 days a week</item>
        <item>Athlete</item>
    </string-array>

</resources>
